# yt-search-niche

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
src/: config.py  models.py  storage.py
src/ai/: claude.py
src/discovery/: claude_discover.py  finder.py
src/hackernews/: search.py
src/reddit/: search.py
src/report/: formatter.py
src/rss/: youtube.py
src/trends/: google.py
src/web/: index.html  server.py
src/youtube/: client.py  stats.py  trending.py
