[project]
name = "yt-search-niche"
version = "0.1.0"
description = "YouTube niche analyzer — finds viral topics, analyzes competition, gives AI recommendations"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pytrends>=4.9.2",
    "google-api-python-client>=2.100.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
]
